# OpenGL46_Eg

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
cmake/: vcpkg.cmake
src/: CMakeLists.txt  atl_window_implementation.inl  gl_shader.cpp  gl_shader.h  gl_vertex_array.cpp  gl_vertex_array.h  main.cpp  opengl.cpp  opengl.h  window.cpp  window.h  window_implementation.inl
